--- a/styles.css
+++ b/styles.css
@@ -158,6 +158,8 @@ div {
     width: 100%;
     border-collapse: collapse;
     margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .table-block th,
